{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 626,
  "lineage": "8797e803-3de4-0b01-48f6-c3212e68d82e",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:loadbalancer/app/capstone-alb/590240dd7e54abe8",
            "arn_suffix": "app/capstone-alb/590240dd7e54abe8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "capstone-alb-1717258877.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973399360835:loadbalancer/app/capstone-alb/590240dd7e54abe8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "capstone-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-009fc0fe697dd74c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fa62c4ccd42adc7"
              },
              {
                "subnet_id": "subnet-053f69c970a6fa514"
              }
            ],
            "subnets": [
              "subnet-00fa62c4ccd42adc7",
              "subnet-053f69c970a6fa514"
            ],
            "vpc_id": "vpc-034d7808e2b1e5f93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:loadbalancer/app/capstone-alb/590240dd7e54abe8"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:listener/app/capstone-alb/590240dd7e54abe8/4b508e99ea568366",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:targetgroup/tf-20260417130135600800000003/ee1548836726ddd5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973399360835:listener/app/capstone-alb/590240dd7e54abe8/4b508e99ea568366",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:loadbalancer/app/capstone-alb/590240dd7e54abe8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:listener/app/capstone-alb/590240dd7e54abe8/4b508e99ea568366"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.tg",
            "module.security.aws_security_group.alb_sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:targetgroup/tf-20260417130135600800000003/ee1548836726ddd5",
            "arn_suffix": "targetgroup/tf-20260417130135600800000003/ee1548836726ddd5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/wp-admin/install.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973399360835:targetgroup/tf-20260417130135600800000003/ee1548836726ddd5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260417130135600800000003",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973399360835:targetgroup/tf-20260417130135600800000003/ee1548836726ddd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0102a36b3e9d5e4df",
            "arn": "arn:aws:ec2:us-east-1:973399360835:instance/i-00a9f5703799b4c1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a9f5703799b4c1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "capstone-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-043a5862ddfdb97c8"
              }
            ],
            "primary_network_interface_id": "eni-043a5862ddfdb97c8",
            "private_dns": "ip-192-168-0-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.8",
            "public_ip": "54.164.104.100",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e3f5ba58ce4ef1bc",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fa62c4ccd42adc7",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070ff844c81e2bde6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "i-00a9f5703799b4c1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "module.bastion.aws_security_group.bastion_sg",
            "module.bastion.data.aws_ami.amazon_linux_2023",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.capstone_vpc",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:security-group/sg-070ff844c81e2bde6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070ff844c81e2bde6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260417130135598700000002",
            "name_prefix": "terraform-",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "sg-070ff844c81e2bde6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:route-table/rtb-050131ca063d47722",
            "id": "rtb-050131ca063d47722",
            "owner_id": "973399360835",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06292c07960b51ccb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "rtb-050131ca063d47722",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094faf98ee35b6042",
            "region": "us-east-1",
            "route_table_id": "rtb-050131ca063d47722",
            "subnet_id": "subnet-00fa62c4ccd42adc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "rtbassoc-094faf98ee35b6042",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.routing.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0219ec94a8d770087",
            "region": "us-east-1",
            "route_table_id": "rtb-050131ca063d47722",
            "subnet_id": "subnet-053f69c970a6fa514"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "rtbassoc-0219ec94a8d770087",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.routing.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:security-group/sg-009fc0fe697dd74c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009fc0fe697dd74c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260417130135600900000004",
            "name_prefix": "terraform-",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg_load_balancer"
            },
            "tags_all": {
              "Name": "aws_sg_load_balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "sg-009fc0fe697dd74c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:security-group/sg-05aceaa26b79a53a6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05aceaa26b79a53a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06343c1a77bd9ef68"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20260417130142866900000007",
            "name_prefix": "terraform-",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg_database"
            },
            "tags_all": {
              "Name": "aws_sg_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "sg-05aceaa26b79a53a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.web_sg",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:security-group/sg-082d9bc6a043c626a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082d9bc6a043c626a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from web instances",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06343c1a77bd9ef68"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20260417130142867000000008",
            "name_prefix": "terraform-",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg_efs"
            },
            "tags_all": {
              "Name": "aws_sg_efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "sg-082d9bc6a043c626a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.web_sg",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:security-group/sg-06343c1a77bd9ef68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06343c1a77bd9ef68",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009fc0fe697dd74c2"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-070ff844c81e2bde6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260417130139370100000006",
            "name_prefix": "terraform-",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg_web"
            },
            "tags_all": {
              "Name": "aws_sg_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "sg-06343c1a77bd9ef68",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:subnet/subnet-0a791e347590d550a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a791e347590d550a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973399360835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "subnet-0a791e347590d550a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:subnet/subnet-04634f264d2e09c67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04634f264d2e09c67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973399360835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "subnet-04634f264d2e09c67",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:subnet/subnet-00fa62c4ccd42adc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fa62c4ccd42adc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973399360835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "subnet-00fa62c4ccd42adc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:subnet/subnet-053f69c970a6fa514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f69c970a6fa514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973399360835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "subnet-053f69c970a6fa514",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:internet-gateway/igw-06292c07960b51ccb",
            "id": "igw-06292c07960b51ccb",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "vpc_id": "vpc-034d7808e2b1e5f93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973399360835:vpc/vpc-034d7808e2b1e5f93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/26",
            "default_network_acl_id": "acl-028025fba0f0273e0",
            "default_route_table_id": "rtb-0cd3af6600d837d4d",
            "default_security_group_id": "sg-0f4622f265f49d6bd",
            "dhcp_options_id": "dopt-0b24ef4521667c7a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034d7808e2b1e5f93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd3af6600d837d4d",
            "owner_id": "973399360835",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone_vpc"
            },
            "tags_all": {
              "Name": "capstone_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "973399360835",
            "id": "vpc-034d7808e2b1e5f93",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}